# nexus-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  chatgpt-gbrain-connection-plan.md  chatgpt-gbrain-dry-run-plan.md  chatgpt-readonly-connector.md  claude-chat-gbrain-plan.md  claude-code-gbrain-operating-instructions.md  codex-gbrain-operating-instructions.md  decision-log.md  gbrain-install-notes.md  gbrain-integration.md  gbrain-local-setup-plan.md  master-plan.md  roadmap.md  usage-tips.md
docs/archive/: README.md  chatgpt-gbrain-connection-plan.md
docs/workflows/: capture-pipeline.md  weekly-checklist-engine.md
scripts/: claude-chat-gbrain-serve.sh  claude-chat-gbrain-tunnel.sh  com.nexus.brain-sync.plist  com.nexus.claude-chat-gbrain.plist  nexus-brain-sync.sh  tunnel.env.example
src/nexus_os/: __init__.py  cli.py  ingest.py  vault.py
templates/: area_page.md  concept_page.md  decision_page.md  organization_page.md  person_page.md  project_page.md  question_page.md  source_summary.md
tests/: test_cli.py
