[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-os"
version = "0.1.0"
description = "Public code engine for an external-vault LLM Wiki and memory layer."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
nexus-os = "nexus_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
